# cstd-pozdnikinmv-2018-2022

./: CMakeLists.txt  README.ML  README.md  db_connection.py  local_server.py  reader.py
receiver/: receiver.fzz  receiver.ino
receiver_ble/: receiver_ble.fzz  receiver_ble.ino
receiver_esp32/: receiver_esp32.fzz  receiver_esp32.ino
tests/: CMakeLists.txt  local_network_parse.c  local_network_parse.h  local_network_parse_tests.cpp
transiever/: transiever.fzz  transiever.ino
transiever_esp32/: tranciever_esp32.fzz  transiever_esp32.ino
